k8s/platform/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
