k8s/platform/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.eks-cluster-lab.duckdns.org"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: auth-tls
          - kind: Secret
            name: backstage-tls
          - kind: Secret
            name: grafana-tls
          - kind: Secret
            name: argocd-tls
      allowedRoutes:
        namespaces:
          from: All
