k8s/platform/traefik-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  namespace: auth
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - auth.eks-cluster-lab.duckdns.org
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - backstage.eks-cluster-lab.duckdns.org
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rate-limit
      backendRefs:
        - name: backstage
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - grafana.eks-cluster-lab.duckdns.org
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rate-limit
      backendRefs:
        - name: monitoring-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - argocd.eks-cluster-lab.duckdns.org
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rate-limit
      backendRefs:
        - name: argocd-server
          port: 80
